--- a/part4/bloglistbackend/package.json
+++ b/part4/bloglistbackend/package.json
@@ -4,13 +4,14 @@
   "description": "bloglist project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test":"jest --verbose"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^27.0.4",
     "nodemon": "^2.0.7"
   },
   "dependencies": {
