--- a/part4/bloglistbackend/package.json
+++ b/part4/bloglistbackend/package.json
@@ -4,13 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "dev": "nodemon index.js",
-    "misc": "nodemon misc.js"
+    "misc": "nodemon misc.js",
+    "lint": "eslint .",
+    "lint:fix": "npm run lint -- --fix"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.1.0",
+    "jest": "^27.3.1",
     "nodemon": "^2.0.9"
   },
   "dependencies": {
