--- a/part4/bloglistbackend/package.json
+++ b/part4/bloglistbackend/package.json
@@ -25,7 +25,9 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "lodash": "^4.17.21",
-    "mongoose": "^5.13.2"
+    "mongoose": "^6.0.12",
+    "mongoose-unique-validator": "^2.0.3"
   }
 }
