--- a/part5/bloglist-frontend/package.json
+++ b/part5/bloglist-frontend/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/user-event": "^12.6.3",
     "axios": "^0.21.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
@@ -41,6 +40,8 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
-    "eslint-plugin-jest": "^24.7.0"
+    "@testing-library/user-event": "^13.5.0",
+    "eslint-plugin-jest": "^24.7.0",
+    "jest-watch-typeahead": "^0.6.5"
   }
 }
