--- a/part7/bloglist/package.json
+++ b/part7/bloglist/package.json
@@ -45,6 +45,7 @@
     "@testing-library/user-event": "^13.5.0",
     "cypress": "^9.5.0",
     "eslint-plugin-jest": "^24.7.0",
-    "jest-watch-typeahead": "^0.6.5"
+    "jest-watch-typeahead": "^0.6.5",
+    "prettier": "2.6.2"
   }
 }
