--- a/part7/bloglist/package.json
+++ b/part7/bloglist/package.json
@@ -44,6 +44,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "cypress": "^9.5.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^24.7.0",
     "jest-watch-typeahead": "^0.6.5",
     "prettier": "2.6.2"
