commit: a new start

--- a/part7/bloglist/.vscode/settings.json
+++ b/part7/bloglist/.vscode/settings.json
@@ -2,5 +2,12 @@
     "emmet.includeLanguages": {
         "javascript": "javascriptreact"
       },
-      "emmet.triggerExpansionOnTab": true
+      "emmet.triggerExpansionOnTab": true,
+      "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": true
+      },
+      "eslint.validate": [
+        "javascript"
+      ],
+      "editor.formatOnSave": true
 }
