--- a/part7/bloglist/package.json
+++ b/part7/bloglist/package.json
@@ -6,9 +6,11 @@
     "axios": "^0.21.1",
     "eslint-plugin-cypress": "^2.12.1",
     "prop-types": "^15.8.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^8.0.2",
     "react-scripts": "4.0.1",
+    "redux": "^4.2.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
