--- a/part7/bloglist/package.json
+++ b/part7/bloglist/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.21.1",
     "eslint-plugin-cypress": "^2.12.1",
     "prop-types": "^15.8.1",
