--- a/part7/bloglist/package.json
+++ b/part7/bloglist/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^8.0.2",
     "react-scripts": "4.0.1",
     "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -47,6 +48,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "cypress": "^9.5.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^24.7.0",
     "jest-watch-typeahead": "^0.6.5",
