--- a/part7/bloglist/package.json
+++ b/part7/bloglist/package.json
@@ -10,6 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
