--- a/part7/bloglist/package.json
+++ b/part7/bloglist/package.json
@@ -5,13 +5,14 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.21.1",
+    "daisyui": "^2.22.0",
     "eslint-plugin-cypress": "^2.12.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "web-vitals": "^0.2.4"
@@ -48,11 +49,14 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.8",
     "cypress": "^9.5.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^24.7.0",
     "jest-watch-typeahead": "^0.6.5",
-    "prettier": "2.6.2"
+    "postcss": "^8.4.16",
+    "prettier": "2.6.2",
+    "tailwindcss": "^3.1.8"
   }
 }
