--- a/part8/library-graphql/package.json
+++ b/part8/library-graphql/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server":"nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.10.1",
-    "graphql": "^16.5.0"
+    "dotenv": "^16.0.3",
+    "graphql": "^16.5.0",
+    "mongoose": "^6.7.2",
+    "nodemon": "^2.0.20"
   }
 }
