--- a/part9/setup/package.json
+++ b/part9/setup/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "ts-node":"ts-node",
     "test": "echo \"Error: no test specified\" && exit 1",
     "calculate":"ts-node bmiCalculator.ts"
   },
