--- a/part9/setup/package.json
+++ b/part9/setup/package.json
@@ -9,12 +9,16 @@
     "ts-node": "ts-node",
     "test": "echo \"Error: no test specified\" && exit 1",
     "bmiCalculate": "ts-node bmiCalculator.ts",
-    "excerciseCalculate": "ts-node excerciseCalculator.ts"
+    "excerciseCalculate": "ts-node excerciseCalculator.ts",
+    "lint":"eslint --ext .ts ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
+    "eslint": "^8.31.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
