--- a/part8/library-graphql/package.json
+++ b/part8/library-graphql/package.json
@@ -6,14 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon index.js",
-    "debug":"nodemon randomdebug.js"
+    "debug": "nodemon randomdebug.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^3.10.1",
+    "@apollo/server": "^4.3.0",
     "dotenv": "^16.0.3",
-    "graphql": "^16.5.0",
+    "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.2",
     "nodemon": "^2.0.20"
