--- a/part9/patientorbackend/package.json
+++ b/part9/patientorbackend/package.json
@@ -10,9 +10,9 @@
     "lint": "eslint --ext .ts .",
     "lint:commands": "eslint -h",
     "lint:fix": "eslint --fix"
-
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
@@ -21,6 +21,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   }
 }
