--- a/part9/patientorbackend/.vscode/settings.json
+++ b/part9/patientorbackend/.vscode/settings.json
@@ -2,6 +2,7 @@
     "emmet.triggerExpansionOnTab": true,
     "editor.codeActionsOnSave": {
         //eslint-runs-automatically-on-save
-      "source.fixAll.eslint": true
+        "source.fixAll.eslint": true
     },
-  }
+    "cSpell.diagnosticLevel": "Hint"
+}
