--- a/part9/patientorbackend/package.json
+++ b/part9/patientorbackend/package.json
@@ -1,27 +1,30 @@
 {
-  "name": "project_name",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "tsc": "tsc",
-    "start": "node build/index.js",
-    "dev": "ts-node-dev src/index.ts",
-    "lint": "eslint --ext .ts .",
-    "lint:commands": "eslint -h",
-    "lint:fix": "eslint --fix"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.15",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
-    "eslint": "^8.31.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.9.4"
-  },
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
-  }
+    "name": "project_name",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "tsc": "tsc",
+        "start": "node build/index.js",
+        "dev": "ts-node-dev src/index.ts",
+        "lint": "eslint --ext .ts .",
+        "lint:fix": "eslint --fix",
+        "prettier:fix": "prettier --write .",
+        "lintformat": "npm run lint && npm run lint:fix && npm run prettier:fix"
+    },
+    "devDependencies": {
+        "@types/cors": "^2.8.13",
+        "@types/express": "^4.17.15",
+        "@typescript-eslint/eslint-plugin": "^5.48.1",
+        "@typescript-eslint/parser": "^5.48.1",
+        "eslint": "^8.31.0",
+        "eslint-config-prettier": "^8.6.0",
+        "prettier": "2.8.2",
+        "ts-node-dev": "^2.0.0",
+        "typescript": "^4.9.4"
+    },
+    "dependencies": {
+        "cors": "^2.8.5",
+        "express": "^4.18.2"
+    }
 }
