--- a/part9/patientorbackend/.vscode/settings.json
+++ b/part9/patientorbackend/.vscode/settings.json
@@ -4,5 +4,6 @@
         //eslint-runs-automatically-on-save
         "source.fixAll.eslint": true
     },
+    // for cspell extension
     "cSpell.diagnosticLevel": "Hint"
 }
