--- a/part9/patientorbackend/package.json
+++ b/part9/patientorbackend/package.json
@@ -24,7 +24,9 @@
         "typescript": "^4.9.4"
     },
     "dependencies": {
+        "@types/uuid": "^9.0.0",
         "cors": "^2.8.5",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "uuid": "^9.0.0"
     }
 }
