--- a/part9/patientor/package.json
+++ b/part9/patientor/package.json
@@ -10,11 +10,13 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.6",
+    "@types/uuid": "^9.0.1",
     "axios": "^0.25.0",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
